Stop off-canvas menu flashing up on page load by moving it further off screen by default

--- a/assets/sass/_elements.scss
+++ b/assets/sass/_elements.scss
@@ -16,6 +16,11 @@ h1 {
 	margin: 1rem auto;
 }
 
+.position-left {
+	/*Stops off canvas menu flashing on page load*/
+	transform: translateX(-100%);
+}
+
 /* Medium and up */
 @media screen and (min-width: 40em) {
 	
